k8s/apps/rpg-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpg-system
spec:
  selector: { app: rpg-system }
  ports:
    - name: http
      port: 8000
      targetPort: http
